k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: krawler
  labels:
    app.kubernetes.io/name: krawler
